--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1617</th>\n",
+       "      <th>1660</th>\n",
+       "      <td>Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC/FeatureServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1616</th>\n",
        "      <td>SICBL_JUL_2022_EN_BUC</td>\n",
        "      <td>FeatureServer</td>\n",
        "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/SICBL_JUL_2022_EN_BUC/FeatureServer</td>\n",
@@ -282,14 +288,16 @@
        "</div>"
       ],
       "text/plain": [
-       "                       name           type  \\\n",
-       "1617  SICBL_JUL_2022_EN_BUC  FeatureServer   \n",
+       "                                                       name           type  \\\n",
+       "1660  Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC  FeatureServer   \n",
+       "1616                                  SICBL_JUL_2022_EN_BUC  FeatureServer   \n",
        "\n",
-       "                                                                                                         url  \n",
-       "1617  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/SICBL_JUL_2022_EN_BUC/FeatureServer  "
+       "                                                                                                                                         url  \n",
+       "1660  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC/FeatureServer  \n",
+       "1616                                  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/SICBL_JUL_2022_EN_BUC/FeatureServer  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,17 +578,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gsheet_areas = pd.read_csv('https://docs.google.com/spreadsheets/u/0/d/15RhWWsHPPMLWoxR5sJcpK-vraRkidRY8jsAb_Y_5GwI/gviz/tq?tqx=out:csv&tq&gid=963757659&headers=1')\n",
+    "gsheet_areas = pd.read_csv('https://docs.google.com/spreadsheets/u/0/d/1yWPMu8cHllEdVl0kuUjjJR5V8yVrnU4jZTIlM1a1XGg/gviz/tq?tqx=out:csv&tq&gid=963757659&headers=1')\n",
     "files_required = gsheet_areas.loc[:, ['shape_file']].dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -621,63 +629,63 @@
        "      <td>STP_Apr_2019_GCB_in_England_2022.csv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>Regions_December_2022_EN_BUC.csv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>SICBL_JUL_2022_EN_BUC.csv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>5</th>\n",
        "      <td>Clinical_Commissioning_Groups_April_2021_EN_BUC_2022.csv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>6</th>\n",
        "      <td>Clinical_Commissioning_Groups_April_2020_Ultra_Generalised_Boundaries_EN_2022.csv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>7</th>\n",
        "      <td>Clinical_Commissioning_Groups_April_2019_Boundaries_EN_BUC_2022.csv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>8</th>\n",
        "      <td>CCG_Apr_2018_UGCB_in_England_2022.csv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>9</th>\n",
        "      <td>CCG_Apr_2017_UGCB_in_England_V4_2022.csv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>10</th>\n",
        "      <td>Local_Authority_Districts_December_2021_UK_BUC_2022.csv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>11</th>\n",
        "      <td>Local_Authority_Districts_December_2020_UK_BUC_2022.csv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>12</th>\n",
        "      <td>Local_Authority_Districts_April_2019_UK_BUC_2022.csv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>13</th>\n",
        "      <td>LAD_December_2018_Boundaries_UK_BUC_2022.csv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>14</th>\n",
        "      <td>Counties_and_Unitary_Authorities_December_2021_EN_BUC.csv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>15</th>\n",
        "      <td>Counties_and_Unitary_Authorities_December_2020_UK_BGC_2022.csv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>16</th>\n",
        "      <td>Counties_and_Unitary_Authorities_April_2019_Boundaries_EW_BUC_2022.csv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>17</th>\n",
        "      <td>Counties_and_Unitary_Authorities_December_2017_EW_BUC_2022.csv</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -689,24 +697,24 @@
        "0                                                          ICB_JUL_2022_EN_BUC_V3.csv\n",
        "1        Sustainability_and_Transformation_Partnerships_April_2021_EN_BUC_V2_2022.csv\n",
        "2                                                STP_Apr_2019_GCB_in_England_2022.csv\n",
-       "4                                                    Regions_December_2022_EN_BUC.csv\n",
-       "5                                                           SICBL_JUL_2022_EN_BUC.csv\n",
-       "6                            Clinical_Commissioning_Groups_April_2021_EN_BUC_2022.csv\n",
-       "7   Clinical_Commissioning_Groups_April_2020_Ultra_Generalised_Boundaries_EN_2022.csv\n",
-       "8                 Clinical_Commissioning_Groups_April_2019_Boundaries_EN_BUC_2022.csv\n",
-       "9                                               CCG_Apr_2018_UGCB_in_England_2022.csv\n",
-       "10                                           CCG_Apr_2017_UGCB_in_England_V4_2022.csv\n",
-       "11                            Local_Authority_Districts_December_2021_UK_BUC_2022.csv\n",
-       "12                            Local_Authority_Districts_December_2020_UK_BUC_2022.csv\n",
-       "13                               Local_Authority_Districts_April_2019_UK_BUC_2022.csv\n",
-       "14                                       LAD_December_2018_Boundaries_UK_BUC_2022.csv\n",
-       "15                          Counties_and_Unitary_Authorities_December_2021_EN_BUC.csv\n",
-       "16                     Counties_and_Unitary_Authorities_December_2020_UK_BGC_2022.csv\n",
-       "17             Counties_and_Unitary_Authorities_April_2019_Boundaries_EW_BUC_2022.csv\n",
-       "18                     Counties_and_Unitary_Authorities_December_2017_EW_BUC_2022.csv"
+       "3                                                    Regions_December_2022_EN_BUC.csv\n",
+       "4                                                           SICBL_JUL_2022_EN_BUC.csv\n",
+       "5                            Clinical_Commissioning_Groups_April_2021_EN_BUC_2022.csv\n",
+       "6   Clinical_Commissioning_Groups_April_2020_Ultra_Generalised_Boundaries_EN_2022.csv\n",
+       "7                 Clinical_Commissioning_Groups_April_2019_Boundaries_EN_BUC_2022.csv\n",
+       "8                                               CCG_Apr_2018_UGCB_in_England_2022.csv\n",
+       "9                                            CCG_Apr_2017_UGCB_in_England_V4_2022.csv\n",
+       "10                            Local_Authority_Districts_December_2021_UK_BUC_2022.csv\n",
+       "11                            Local_Authority_Districts_December_2020_UK_BUC_2022.csv\n",
+       "12                               Local_Authority_Districts_April_2019_UK_BUC_2022.csv\n",
+       "13                                       LAD_December_2018_Boundaries_UK_BUC_2022.csv\n",
+       "14                          Counties_and_Unitary_Authorities_December_2021_EN_BUC.csv\n",
+       "15                     Counties_and_Unitary_Authorities_December_2020_UK_BGC_2022.csv\n",
+       "16             Counties_and_Unitary_Authorities_April_2019_Boundaries_EW_BUC_2022.csv\n",
+       "17                     Counties_and_Unitary_Authorities_December_2017_EW_BUC_2022.csv"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +836,7 @@
        "4  properties.SICBL22CD  properties.SICBL22NM  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,12 +844,12 @@
    "source": [
     "data = code_and_name_fields('shapes')\n",
     "# data.to_csv('2023-08-10_shape_code_and_name_fields.csv', index=False)\n",
-    "# data.head()"
+    "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,11 +913,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "shape.loc[shape.loc[:,'area_type_id']==102].to_csv('102_test.csv', index=False)"
+    "shape.loc[shape.loc[:,'area_type_id']==66].to_csv('66_test.csv', index=False)"
    ]
   },
   {
