have a look at how many shapes per geog

--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
        "17                     Counties_and_Unitary_Authorities_December_2017_EW_BUC_2022.csv"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
        "4  properties.SICBL22CD  properties.SICBL22NM  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,12 +908,12 @@
     "\n",
     "shape = shape.loc[:,cols].rename(columns=cols_dict)\n",
     "\n",
-    "# shape.to_csv('2023-08-10_shapes.csv', index=False)"
+    "shape.to_csv('2023-08-10_shapes.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,10 +922,342 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>shape</th>\n",
+       "      <th>area_code</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>area_type_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>391</td>\n",
+       "      <td>391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201</th>\n",
+       "      <td>382</td>\n",
+       "      <td>382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>301</th>\n",
+       "      <td>379</td>\n",
+       "      <td>379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>401</th>\n",
+       "      <td>374</td>\n",
+       "      <td>374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>302</th>\n",
+       "      <td>216</td>\n",
+       "      <td>216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>207</td>\n",
+       "      <td>207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>195</td>\n",
+       "      <td>195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>191</td>\n",
+       "      <td>191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>174</td>\n",
+       "      <td>174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202</th>\n",
+       "      <td>173</td>\n",
+       "      <td>173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>402</th>\n",
+       "      <td>152</td>\n",
+       "      <td>152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>135</td>\n",
+       "      <td>135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>106</td>\n",
+       "      <td>106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>106</td>\n",
+       "      <td>106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219</th>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>220</th>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>221</th>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              shape  area_code\n",
+       "area_type_id                  \n",
+       "101             391        391\n",
+       "201             382        382\n",
+       "301             379        379\n",
+       "401             374        374\n",
+       "302             216        216\n",
+       "152             207        207\n",
+       "154             195        195\n",
+       "165             191        191\n",
+       "102             174        174\n",
+       "202             173        173\n",
+       "402             152        152\n",
+       "166             135        135\n",
+       "66              106        106\n",
+       "167             106        106\n",
+       "219              42         42\n",
+       "220              42         42\n",
+       "221              42         42\n",
+       "6                 9          9"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AreaTypeId</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>shape</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Government Office Region</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>221</td>\n",
+       "      <td>ICBs, former STPs</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>220</td>\n",
+       "      <td>Sustainability and Transformation Footprints</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>219</td>\n",
+       "      <td>STP (120 +218)</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>66</td>\n",
+       "      <td>Sub-ICB, former CCGs</td>\n",
+       "      <td>106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>167</td>\n",
+       "      <td>CCGs (2021/22)</td>\n",
+       "      <td>106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>166</td>\n",
+       "      <td>CCGs (2020/21)</td>\n",
+       "      <td>135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>402</td>\n",
+       "      <td>Upper tier local authorities (post 4/21)</td>\n",
+       "      <td>152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>202</td>\n",
+       "      <td>Upper tier local authorities (4/19 - 3/20)</td>\n",
+       "      <td>173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>102</td>\n",
+       "      <td>Upper tier local authorities (pre 4/19)</td>\n",
+       "      <td>174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>165</td>\n",
+       "      <td>CCGs (2019/20)</td>\n",
+       "      <td>191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>154</td>\n",
+       "      <td>CCGs (2018/19)</td>\n",
+       "      <td>195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>152</td>\n",
+       "      <td>CCGs (2017/18)</td>\n",
+       "      <td>207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>302</td>\n",
+       "      <td>Upper tier local authorities (4/20-3/21)</td>\n",
+       "      <td>216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>401</td>\n",
+       "      <td>Lower tier local authorities (post 4/21)</td>\n",
+       "      <td>374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>301</td>\n",
+       "      <td>Lower tier local authorities (4/20-3/21)</td>\n",
+       "      <td>379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>201</td>\n",
+       "      <td>Lower tier local authorities (4/19 - 3/20)</td>\n",
+       "      <td>382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>101</td>\n",
+       "      <td>Lower tier local authorities (pre 4/19)</td>\n",
+       "      <td>391</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    AreaTypeId                                          Name  shape\n",
+       "3            6                      Government Office Region      9\n",
+       "0          221                             ICBs, former STPs     42\n",
+       "1          220  Sustainability and Transformation Footprints     42\n",
+       "2          219                                STP (120 +218)     42\n",
+       "4           66                          Sub-ICB, former CCGs    106\n",
+       "5          167                                CCGs (2021/22)    106\n",
+       "6          166                                CCGs (2020/21)    135\n",
+       "14         402      Upper tier local authorities (post 4/21)    152\n",
+       "16         202    Upper tier local authorities (4/19 - 3/20)    173\n",
+       "17         102       Upper tier local authorities (pre 4/19)    174\n",
+       "7          165                                CCGs (2019/20)    191\n",
+       "8          154                                CCGs (2018/19)    195\n",
+       "9          152                                CCGs (2017/18)    207\n",
+       "15         302      Upper tier local authorities (4/20-3/21)    216\n",
+       "10         401      Lower tier local authorities (post 4/21)    374\n",
+       "11         301      Lower tier local authorities (4/20-3/21)    379\n",
+       "12         201    Lower tier local authorities (4/19 - 3/20)    382\n",
+       "13         101       Lower tier local authorities (pre 4/19)    391"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.merge(gsheet_areas,\n",
+    "         shape.groupby('area_type_id').count().sort_values('area_code', ascending=False),\n",
+    "         how='inner',\n",
+    "         left_on='AreaTypeId',\n",
+    "         right_on='area_type_id').loc[:, ['AreaTypeId', 'Name', 'shape']].sort_values(by='shape',ascending=True)"
+   ]
   },
   {
    "cell_type": "code",
