save csv with sep '#'

--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -908,7 +908,7 @@
     "\n",
     "shape = shape.loc[:,cols].rename(columns=cols_dict)\n",
     "\n",
-    "shape.to_csv('2023-08-10_shapes.csv', index=False)"
+    "shape.to_csv('2023-08-10_shapes.csv', sep='#', index=False)"
    ]
   },
   {
