incl area_name and remove non-eng rows

--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -896,17 +896,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "shape = pd.read_csv('shapes/2023-08-10_shapes_appended.csv')\n",
-    "cols = ['geometry.coordinates', 'area_code', 'area_type_id']\n",
+    "cols = ['geometry.coordinates', 'area_code', 'area_name', 'area_type_id']\n",
     "cols_dict = {'geometry.coordinates': 'shape'}\n",
     "\n",
     "shape = shape.loc[:,cols].rename(columns=cols_dict)\n",
+    "\n",
+    "# # remove wales rows\n",
+    "shape = shape.loc[~shape.loc[:,'area_code'].str.startswith('W0')]\n",
+    "\n",
+    "# # # remove scotland rows\n",
+    "shape = shape.loc[~shape.loc[:,'area_code'].str.startswith('S12')]\n",
+    "\n",
+    "# # # remove NI rows\n",
+    "shape = shape.loc[~shape.loc[:,'area_code'].str.startswith('N0')]\n",
+    "\n",
     "\n",
     "shape.to_csv('2023-08-10_shapes.csv', sep='#', index=False)"
    ]
