save uk countries

--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -232,59 +232,103 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>350</th>\n",
-       "      <td>Country</td>\n",
+       "      <th>342</th>\n",
+       "      <td>Countries_December_2022_GB_BFC</td>\n",
        "      <td>FeatureServer</td>\n",
-       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Country/FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Countries_December_2022_GB_BFC/FeatureServer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>359</th>\n",
-       "      <td>Covid_Infection_Survey__October_2020__to_Country_Lookup_for_the_United_Kingdom</td>\n",
+       "      <th>343</th>\n",
+       "      <td>Countries_December_2022_GB_BFE</td>\n",
        "      <td>FeatureServer</td>\n",
-       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Covid_Infection_Survey__October_2020__to_Country_Lookup_for_the_United_Kingdom/FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Countries_December_2022_GB_BFE/FeatureServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>344</th>\n",
+       "      <td>Countries_December_2022_GB_BGC</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Countries_December_2022_GB_BGC/FeatureServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>345</th>\n",
+       "      <td>Countries_December_2022_GB_BUC</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Countries_December_2022_GB_BUC/FeatureServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>346</th>\n",
+       "      <td>Countries_December_2022_UK_BFC</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Countries_December_2022_UK_BFC/FeatureServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>347</th>\n",
+       "      <td>Countries_December_2022_UK_BFE</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Countries_December_2022_UK_BFE/FeatureServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>348</th>\n",
+       "      <td>Countries_December_2022_UK_BGC</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Countries_December_2022_UK_BGC/FeatureServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>349</th>\n",
+       "      <td>Countries_December_2022_UK_BUC</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Countries_December_2022_UK_BUC/FeatureServer</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                               name  \\\n",
-       "350                                                                         Country   \n",
-       "359  Covid_Infection_Survey__October_2020__to_Country_Lookup_for_the_United_Kingdom   \n",
+       "                               name           type  \\\n",
+       "342  Countries_December_2022_GB_BFC  FeatureServer   \n",
+       "343  Countries_December_2022_GB_BFE  FeatureServer   \n",
+       "344  Countries_December_2022_GB_BGC  FeatureServer   \n",
+       "345  Countries_December_2022_GB_BUC  FeatureServer   \n",
+       "346  Countries_December_2022_UK_BFC  FeatureServer   \n",
+       "347  Countries_December_2022_UK_BFE  FeatureServer   \n",
+       "348  Countries_December_2022_UK_BGC  FeatureServer   \n",
+       "349  Countries_December_2022_UK_BUC  FeatureServer   \n",
        "\n",
-       "              type  \\\n",
-       "350  FeatureServer   \n",
-       "359  FeatureServer   \n",
-       "\n",
-       "                                                                                                                                                                 url  \n",
-       "350                                                                         https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Country/FeatureServer  \n",
-       "359  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Covid_Infection_Survey__October_2020__to_Country_Lookup_for_the_United_Kingdom/FeatureServer  "
+       "                                                                                                                 url  \n",
+       "342  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Countries_December_2022_GB_BFC/FeatureServer  \n",
+       "343  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Countries_December_2022_GB_BFE/FeatureServer  \n",
+       "344  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Countries_December_2022_GB_BGC/FeatureServer  \n",
+       "345  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Countries_December_2022_GB_BUC/FeatureServer  \n",
+       "346  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Countries_December_2022_UK_BFC/FeatureServer  \n",
+       "347  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Countries_December_2022_UK_BFE/FeatureServer  \n",
+       "348  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Countries_December_2022_UK_BGC/FeatureServer  \n",
+       "349  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Countries_December_2022_UK_BUC/FeatureServer  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "shape_name_contains(\"country\", \"\")"
+    "shape_name_contains(\"countr\", \"2022_\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Country.csv successfully saved\n"
+      "Countries_December_2022_UK_BUC.csv successfully saved\n"
      ]
     }
    ],
    "source": [
-    "save_geojson_from_dataset_name('Country')"
+    "save_geojson_from_dataset_name(\"Countries_December_2022_UK_BUC\")"
    ]
   },
   {
